--- a/7.3/.gitignore
+++ b/7.3/.gitignore
@@ -1,4 +1,4 @@
-/node_modules/
+﻿/node_modules/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -7,5 +7,6 @@
 *.code-workspace
 .history/
 user.js
-*.log
+playwright/user.js
 coverage/
+test-results/
