--- a/7.3/package.json
+++ b/7.3/package.json
@@ -2,6 +2,15 @@
   "name": "jsaqa_3_2",
   "version": "1.0.0",
   "description": "Jest and Playwright tests",
+  "keywords": [
+    "jest",
+    "playwright",
+    "test",
+    "jsaqa"
+  ],
+  "license": "ISC",
+  "author": "Makarov Dmitry",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "npm run test:jest && npm run test:playwright",
@@ -11,9 +20,263 @@
     "test:playwright:headed": "npx playwright test --headed",
     "test:playwright:debug": "npx playwright test --debug"
   },
-  "keywords": ["jest", "playwright", "test", "jsaqa"],
-  "author": "Makarov Dmitry",
-  "license": "ISC",
+  "dependencies": {
+    "abab": "^2.0.6",
+    "acorn": "^8.15.0",
+    "acorn-globals": "^6.0.0",
+    "acorn-walk": "^7.2.0",
+    "agent-base": "^6.0.2",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
+    "asynckit": "^0.4.0",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-jest-hoist": "^27.5.1",
+    "babel-preset-current-node-syntax": "^1.2.0",
+    "babel-preset-jest": "^27.5.1",
+    "balanced-match": "^1.0.2",
+    "baseline-browser-mapping": "^2.9.18",
+    "brace-expansion": "^1.1.12",
+    "braces": "^3.0.3",
+    "browser-process-hrtime": "^1.0.0",
+    "browserslist": "^4.28.1",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001766",
+    "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "ci-info": "^3.9.0",
+    "cjs-module-lexer": "^1.4.3",
+    "cliui": "^7.0.4",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^1.9.0",
+    "cross-spawn": "^7.0.6",
+    "cssom": "^0.4.4",
+    "cssstyle": "^2.3.0",
+    "data-urls": "^2.0.0",
+    "debug": "^4.4.3",
+    "decimal.js": "^10.6.0",
+    "dedent": "^0.7.0",
+    "deepmerge": "^4.3.1",
+    "delayed-stream": "^1.0.0",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^27.5.1",
+    "domexception": "^2.0.1",
+    "dunder-proto": "^1.0.1",
+    "electron-to-chromium": "^1.5.278",
+    "emittery": "^0.8.1",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.4",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "escalade": "^3.2.0",
+    "escape-string-regexp": "^2.0.0",
+    "escodegen": "^2.1.0",
+    "esprima": "^4.0.1",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
+    "expect": "^27.5.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fb-watchman": "^2.0.2",
+    "fill-range": "^7.1.1",
+    "find-up": "^4.1.0",
+    "form-data": "^3.0.4",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.3.0",
+    "get-package-type": "^0.1.0",
+    "get-proto": "^1.0.1",
+    "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "has-flag": "^4.0.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "html-encoding-sniffer": "^2.0.1",
+    "html-escaper": "^2.0.2",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.1",
+    "human-signals": "^2.1.0",
+    "iconv-lite": "^0.4.24",
+    "import-local": "^3.2.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-core-module": "^2.16.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-number": "^7.0.0",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-stream": "^2.0.1",
+    "is-typedarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-instrument": "^5.2.1",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.2.0",
+    "jest-changed-files": "^27.5.1",
+    "jest-circus": "^27.5.1",
+    "jest-cli": "^27.5.1",
+    "jest-config": "^27.5.1",
+    "jest-diff": "^27.5.1",
+    "jest-docblock": "^27.5.1",
+    "jest-each": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
+    "jest-environment-node": "^27.5.1",
+    "jest-get-type": "^27.5.1",
+    "jest-haste-map": "^27.5.1",
+    "jest-jasmine2": "^27.5.1",
+    "jest-leak-detector": "^27.5.1",
+    "jest-matcher-utils": "^27.5.1",
+    "jest-message-util": "^27.5.1",
+    "jest-mock": "^27.5.1",
+    "jest-pnp-resolver": "^1.2.3",
+    "jest-regex-util": "^27.5.1",
+    "jest-resolve": "^27.5.1",
+    "jest-resolve-dependencies": "^27.5.1",
+    "jest-runner": "^27.5.1",
+    "jest-runtime": "^27.5.1",
+    "jest-serializer": "^27.5.1",
+    "jest-snapshot": "^27.5.1",
+    "jest-util": "^27.5.1",
+    "jest-validate": "^27.5.1",
+    "jest-watcher": "^27.5.1",
+    "jest-worker": "^27.5.1",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.2",
+    "jsdom": "^16.7.0",
+    "jsesc": "^3.1.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json5": "^2.2.3",
+    "kleur": "^3.0.3",
+    "leven": "^3.1.0",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.23",
+    "lru-cache": "^5.1.1",
+    "make-dir": "^4.0.0",
+    "makeerror": "^1.0.12",
+    "math-intrinsics": "^1.1.0",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.8",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.3",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.27",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "nwsapi": "^2.2.23",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "parse-json": "^5.2.0",
+    "parse5": "^6.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.7",
+    "pkg-dir": "^4.2.0",
+    "playwright": "^1.58.1",
+    "playwright-core": "^1.58.1",
+    "pretty-format": "^27.5.1",
+    "prompts": "^2.4.2",
+    "psl": "^1.15.0",
+    "punycode": "^2.3.1",
+    "querystringify": "^2.2.0",
+    "react-is": "^17.0.2",
+    "require-directory": "^2.1.1",
+    "requires-port": "^1.0.0",
+    "resolve": "^1.22.11",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "resolve.exports": "^1.1.1",
+    "rimraf": "^3.0.2",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^5.0.1",
+    "semver": "^6.3.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.21",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-hyperlinks": "^2.3.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "symbol-tree": "^3.2.4",
+    "terminal-link": "^2.1.1",
+    "test-exclude": "^6.0.0",
+    "throat": "^6.0.2",
+    "tmpl": "^1.0.5",
+    "to-regex-range": "^5.0.1",
+    "tough-cookie": "^4.1.4",
+    "tr46": "^2.1.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
+    "typedarray-to-buffer": "^3.1.5",
+    "undici-types": "^7.16.0",
+    "universalify": "^0.2.0",
+    "update-browserslist-db": "^1.2.3",
+    "url-parse": "^1.5.10",
+    "v8-to-istanbul": "^8.1.1",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^2.0.0",
+    "walker": "^1.0.8",
+    "webidl-conversions": "^6.1.0",
+    "whatwg-encoding": "^1.0.5",
+    "whatwg-mimetype": "^2.3.0",
+    "whatwg-url": "^8.7.0",
+    "which": "^2.0.2",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "ws": "^7.5.10",
+    "xml-name-validator": "^3.0.0",
+    "xmlchars": "^2.2.0",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.9"
+  },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "jest": "^27.3.1"
